front excel fix

--- a/help.html
+++ b/help.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./app.css?v=11">
 </head>
-<body>
+<body class="help-page">
   <div class="container">
     <h1>📋 Как работает планировщик</h1>
     <div class="subtitle">Руководство по использованию системы планирования производства</div>
