Add user management

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
           </h1>
         </div>
         <div class="header-actions">
+          <span id="auth-info" class="subtitle" style="font-size:13px; min-width:140px;">
+            Не авторизован
+          </span>
+          <button id="btn-login" class="btn secondary">
+            <span>🔐</span> Войти
+          </button>
+          <button id="btn-logout" class="btn ghost" style="display:none;">
+            <span>🚪</span> Выйти
+          </button>
           <button id="btn-help" class="btn secondary">
             <span>💡</span> Справка
           </button>
@@ -146,7 +155,34 @@
             <div class="help">Для будущего применения</div>
           </div>
         </div>
+        <div id="user-admin-wrapper" class="card" style="margin-top:16px; display:none;">
+          <h3>👥 Управление пользователями</h3>
+          <div id="user-admin-content" class="help">
+            Загрузка...
+          </div>
+        </div>
       </section>
+    </div>
+  </div>
+  <div id="login-modal" class="modal hidden">
+    <div class="modal-backdrop"></div>
+    <div class="modal-content card">
+      <h3>🔐 Вход в систему</h3>
+      <div class="grid">
+        <div>
+          <label>Логин</label>
+          <input id="login-username" type="text" autocomplete="username">
+        </div>
+        <div>
+          <label>Пароль</label>
+          <input id="login-password" type="password" autocomplete="current-password">
+        </div>
+        <div class="row row-end">
+          <button id="btn-login-submit" class="btn success">Войти</button>
+          <button id="btn-login-cancel" class="btn secondary">Отмена</button>
+        </div>
+        <div id="login-error" class="help" style="color:var(--danger);display:none;"></div>
+      </div>
     </div>
   </div>
   <script src="./config.js?v=1"></script>
