user login fix 3_2

--- a/index.html
+++ b/index.html
@@ -185,6 +185,33 @@
       </div>
     </div>
   </div>
+  <!-- Модалка смены пароля -->
+  <div id="pw-modal" class="modal hidden">
+    <div class="modal-backdrop"></div>
+    <div class="modal-content card">
+      <h3>🔑 Смена пароля</h3>
+      <div class="grid">
+        <div>
+          <label>Текущий пароль</label>
+          <input id="pw-old" type="password" autocomplete="current-password">
+        </div>
+        <div>
+          <label>Новый пароль</label>
+          <input id="pw-new" type="password" autocomplete="new-password">
+        </div>
+        <div>
+          <label>Подтверждение нового пароля</label>
+          <input id="pw-new2" type="password" autocomplete="new-password">
+        </div>
+        <div class="row row-end">
+          <button id="btn-pw-submit" class="btn success">Сменить пароль</button>
+        </div>
+        <div id="pw-error"
+             class="help"
+             style="color:var(--danger);display:none;"></div>
+      </div>
+    </div>
+  </div>
   <script src="./config.js?v=1"></script>
   <script src="./app.js?v=11" defer></script>
 </body>
