user login fix 4_2

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <button id="btn-import" class="btn secondary">
             ⬆ Загрузить
           </button>
+          <input type="file" id="file-json" accept=".json" style="display:none">
           <button id="btn-export" class="btn secondary">
             💾 Сохранить
           </button>
