add dxf grafics

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
         <button class="tab" data-tab="export">
           <span class="tab-icon">📊</span> Настройки и статистика
         </button>
+        <button class="tab" data-tab="dxf" id="tab-btn-dxf" style="display:none;">
+          <span class="tab-icon">📐</span> Работа с DXF
+        </button>
       </div>
 
       <section id="tab-orders" class="section active">
@@ -180,6 +183,46 @@
           </div>
         </div>
       </section>
+
+      <section id="tab-dxf" class="section">
+        <h2>Работа с DXF</h2>
+
+        <div class="card">
+          <p class="help">
+            Загрузите карту раскроя в формате DXF. Сервис распознает параметры и длины
+            «Кромка» и «Подворот», а также технологические стыки ТС и ЦС.
+          </p>
+
+          <div style="margin-bottom: 12px; display:flex; flex-wrap:wrap; gap:8px; align-items:center;">
+            <input type="file" id="dxf-file" accept=".dxf">
+            <button class="btn primary" id="dxf-analyze-btn">Загрузить и распознать</button>
+          </div>
+
+          <div id="dxf-status" class="help"></div>
+
+          <div id="dxf-result" style="margin-top: 12px; display: none;">
+            <div class="grid g2">
+              <div>
+                <div class="muted">Кромка</div>
+                <div id="dxf-kromka"></div>
+              </div>
+              <div>
+                <div class="muted">Подворот</div>
+                <div id="dxf-podvorot"></div>
+              </div>
+              <div>
+                <div class="muted">ТС</div>
+                <div id="dxf-ts"></div>
+              </div>
+              <div>
+                <div class="muted">ЦС</div>
+                <div id="dxf-cs"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
     </div>
   </div>
   <div id="login-modal" class="modal hidden">
